<resources>
    <string name="pf_theme" translatable="false">pf_theme</string>
    <string name="pf_notification_switch" translatable="false">pf_notification_switch</string>
    <string name="pf_notification_time" translatable="false">pf_notification_time</string>
    <string name="pf_vibration_switch" translatable="false">pf_vibration</string>
    <string name="key_notification_hours" translatable="false">notification_hours</string>
    <string name="key_notification_minutes" translatable="false">notification_minutes</string>
    <string name="is_theme_changed" translatable="false">is_theme_changed</string>

    <string name="app_name">Quick Calculation</string>
    <string name="action_settings">Settings</string>
    <string name="operators">Operators</string>
    <string name="timer">Timer</string>
    <string name="starts_now">Starts Now!</string>
    <string name="result">Result</string>
    <string name="report_card">Results</string>
    <string name="total_attempts">Total Attempts</string>
    <string name="total_correct">Total Correct</string>
    <string name="play_again">Play Again</string>
    <string name="next">Next</string>
    <string name="correct">Correct!</string>
    <string name="wrong">Wrong</string>
    <string name="done">Done!</string>
    <string name="input_number_ranges">Input number ranges</string>
    <string name="range_1">Range 1</string>
    <string name="to">to</string>
    <string name="range_2">Range 2</string>
    <string name="number">number</string>
    <string name="upper_value_must_be_greater">Must be greater than lower value</string>
    <string name="submit">Submit</string>
    <string name="title_activity_settings">Settings</string>
    <string name="select_theme">Select Theme</string>
    <string name="notification">Notification</string>
    <string name="notification_time">Notification Time</string>
    
    <string name="skip">Skip</string>
    <string name="use_keyboard_input">Use Keyboard Input</string>
    <string name="end_quiz">End Quiz</string>
</resources>
