<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_operators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/operators"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_operator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:entries="@array/operations"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_operators" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"

        android:text="@string/timer"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_operator" />

    <Spinner
        android:id="@+id/spinner_timer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:entries="@array/timer"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_timer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_input_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"

        android:text="@string/input_number_ranges"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_timer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_range1"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"

        android:gravity="bottom|end"
        android:text="@string/range_1"
        app:layout_constraintEnd_toStartOf="@id/et_range1_lower"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_input_range" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_range1_lower"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        android:minHeight="48dp"
        android:nextFocusRight="@id/et_range1_upper"
        android:nextFocusDown="@id/et_range1_upper"
        android:nextFocusForward="@id/et_range1_upper"
        app:layout_constraintStart_toEndOf="@+id/tv_range1"
        app:layout_constraintTop_toBottomOf="@+id/tv_input_range" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="25dp"

        android:paddingStart="12dp"
        android:paddingLeft="12dp"
        android:paddingTop="12dp"
        android:paddingEnd="12dp"
        android:paddingRight="12dp"
        android:text="@string/to"
        app:layout_constraintStart_toEndOf="@+id/et_range1_lower"
        app:layout_constraintTop_toBottomOf="@id/tv_input_range" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_range1_upper"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        android:minHeight="48dp"
        android:nextFocusRight="@id/et_range2_lower"
        android:nextFocusDown="@id/et_range2_lower"
        android:nextFocusForward="@id/et_range2_lower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@id/tv_input_range" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_range2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"

        android:gravity="bottom|end"
        android:text="@string/range_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_range1" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_range2_lower"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        android:minHeight="48dp"
        android:nextFocusRight="@id/et_range2_upper"
        android:nextFocusDown="@id/et_range2_upper"
        android:nextFocusForward="@id/et_range2_upper"
        app:layout_constraintStart_toEndOf="@+id/tv_range2"
        app:layout_constraintTop_toBottomOf="@+id/et_range1_lower" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"

        android:paddingStart="12dp"
        android:paddingLeft="12dp"
        android:paddingTop="12dp"
        android:paddingEnd="12dp"
        android:paddingRight="12dp"
        android:text="@string/to"
        app:layout_constraintStart_toEndOf="@+id/et_range2_lower"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_range2_upper"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        android:minHeight="48dp"
        android:nextFocusLeft="@id/et_range2_lower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/et_range1_upper" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"

        android:text="@string/starts_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

</androidx.constraintlayout.widget.ConstraintLayout>