<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alwaysDrawnWithCache="true"
    tools:context=".QuizActivity"
    tools:visibility="visible">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/timer"
        style="@style/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-smallcaps"
        android:padding="10dp"
        android:text="30s"
        android:textAllCaps="false"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText"
        tools:visibility="visible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/score"
        style="@style/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:fontFamily="sans-serif-smallcaps"
        android:padding="10dp"
        android:text="0/0"
        android:textAllCaps="false"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText"
        tools:visibility="visible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/question"
        style="@style/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="50 + 9"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText"
        tools:visibility="visible" />


    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question"
        tools:visibility="visible">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="15dp"
            android:text="59"
            android:textSize="36sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1"
            tools:ignore="HardcodedText"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="15dp"
            android:text="49"
            android:textSize="36sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1"
            tools:ignore="HardcodedText"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="15dp"
            android:text="41"
            android:textSize="36sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1"
            tools:ignore="HardcodedText"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif-smallcaps"
            android:padding="15dp"
            android:text="69"
            android:textSize="36sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1"
            tools:ignore="HardcodedText"
            tools:visibility="visible" />
    </androidx.gridlayout.widget.GridLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/result"
        android:textAllCaps="true"
        android:textColor="@android:color/background_dark"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/options" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/submit"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/results"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:alwaysDrawnWithCache="true"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_report_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:padding="10dp"
            android:text="@string/report_card"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_total_correct"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/total_correct"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_report_card" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_total_correct_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="50dp"
            android:padding="5dp"
            android:text="25"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/tv_total_correct"
            app:layout_constraintTop_toBottomOf="@+id/tv_report_card"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_total_attempt"
            android:layout_width="160dp"
            android:layout_height="0dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/total_attempts"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_total_correct" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_total_attempt_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="50dp"
            android:padding="5dp"
            android:text="25"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/tv_total_attempt"
            app:layout_constraintTop_toBottomOf="@+id/tv_total_correct"
            tools:ignore="HardcodedText" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_play_again"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:text="@string/play_again"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_total_attempt"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>